--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assests/styles.css">
 </head>
 <body>
-    <p>hello world</p>
+    <h1> Joanna Wang </h1>
+    <img id="avatar" src="./assests/gudetama.jpg"/> 
 </body>
 </html>
