--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assests/styles.css">
-</head>
-<body>
-    <h1> Joanna Wang </h1>
-    <img id="avatar" src="./assests/gudetama.jpg"/> 
-</body>
+    <link rel="stylesheet" href="./assests/styles.css" />
+  </head>
+  <body>
+    <div id="root">
+      <div class="nav">
+        <img id="joanna" src="assests/joanna.jpg" />
+        <h2>Joanna Wang</h2>
+      </div>
+      <div class="green">
+        <h1>Hi there!</h1>
+        <h3>A bit about me...</h3>
+      </div>
+    </div>
+  </body>
 </html>
