added navigation to all tab files

--- a/projects.html
+++ b/projects.html
@@ -12,20 +12,18 @@
         <img id="joanna" src="assests/joanna.jpg" />
         <h2>Joanna Wang</h2>
         <div class="nav-item no-bottom-border">
-          <a href="index.html"><p class="nav-text">About Me</p></a>
+          <p class="nav-text">About Me</p>
         </div>
         <div class="nav-item no-bottom-border">
-          <a href="projects.html"><p class="nav-text">Projects</p></a>
+          <p class="nav-text">Projects</p>
         </div>
         <div class="nav-item">
-          <a href="secret.html"><p class="nav-text">Secret Link</p></a>
+          <p class="nav-text">Secret Link</p>
         </div>
       </div>
 
       <div class="about-me">
-        <h1>Hi there!</h1>
-        <h3>A bit about me...</h3>
-        <a href="projects.html">Click me please!</a>
+        <p>PROJECTS</p>
       </div>
     </div>
   </body>
