--- a/secret.html
+++ b/secret.html
@@ -5,26 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assests/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root">
-      <div class="nav">
-        <img id="joanna" src="assests/joanna.jpg" />
-        <h2>Joanna Wang</h2>
-        <div class="nav-item no-bottom-border">
-          <p class="nav-text">About Me</p>
-        </div>
-        <div class="nav-item no-bottom-border">
-          <p class="nav-text">Projects</p>
-        </div>
-        <div class="nav-item">
-          <p class="nav-text">Secret Link</p>
-        </div>
-      </div>
-
-      <div class="about-me">
+      <div id="nav-bar"></div>
+      <div class="main-body">
         <p>SECRETS</p>
+        <button onClick="onClick()">CLick me for a new image</button>
+        <iframe
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+          title="video"
+        ></iframe>
       </div>
     </div>
+
+    <script>
+      function onClick() {
+        document.getElementsByClassName("about-me")[0].style.backgroundColor =
+          "pink";
+      }
+    </script>
   </body>
+  <script>
+    $(function () {
+      $("#nav-bar").load("./assests/nav-bar.html");
+    });
+  </script>
 </html>
