added hover and active effect to nav component

--- a/assests/nav-bar.html
+++ b/assests/nav-bar.html
@@ -1,13 +1,13 @@
 <div class="nav">
   <img id="avatar" src="assests/joanna.jpg" />
   <h2>Joanna Wang</h2>
-  <div class="nav-item no-bottom-border">
+  <div id="index" class="nav-item no-bottom-border">
     <a href="index.html"><p class="nav-text">About Me</p></a>
   </div>
-  <div class="nav-item no-bottom-border">
+  <div id="projects" class="nav-item no-bottom-border">
     <a href="projects.html"><p class="nav-text">Projects</p></a>
   </div>
-  <div class="nav-item">
+  <div id="secret" class="nav-item">
     <a href="secret.html"><p class="nav-text">Secret Link</p></a>
   </div>
   <div>
@@ -19,3 +19,11 @@
     <img class="nav-icon" src="./assests/github.svg" />
   </div>
 </div>
+<script>
+  const url = window.location.href;
+  const start = url.lastIndexOf("/");
+  const end = url.indexOf(".html");
+  const currentActive = url.slice(start + 1, end);
+
+  $(`#${currentActive}`).addClass("active");
+</script>
