--- a/assests/nav-bar.html
+++ b/assests/nav-bar.html
@@ -24,6 +24,9 @@
   const start = url.lastIndexOf("/");
   const end = url.indexOf(".html");
   const currentActive = url.slice(start + 1, end);
-
-  $(`#${currentActive}`).addClass("active");
+  if (currentActive == "") {
+    $(`#index`).addClass("active");
+  } else {
+    $(`#${currentActive}`).addClass("active");
+  }
 </script>
