added console log to check for bugs

--- a/assests/nav-bar.html
+++ b/assests/nav-bar.html
@@ -24,6 +24,7 @@
   const start = url.lastIndexOf("/");
   const end = url.indexOf(".html");
   const currentActive = url.slice(start + 1, end);
+  console.log(currentActive);
   if (currentActive == "") {
     $(`#index`).addClass("active");
   } else {
