added api jokes

--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,5 @@
       </div>
     </div>
   </body>
-  <script>
-    $(function () {
-      $("#nav-bar").load("./assests/nav-bar.html");
-    });
-  </script>
+  <script src="js/index.js"></script>
 </html>
