--- a/secret.html
+++ b/secret.html
@@ -20,24 +20,15 @@
       <div id="nav-bar"></div>
       <div class="main-body">
         <p>SECRETS</p>
-        <button onClick="onClick()">CLick me for a new image</button>
+        <button onClick="onClick()">Click here for a funny joke</button>
         <iframe
           src="https://www.youtube.com/embed/dQw4w9WgXcQ"
           title="video"
         ></iframe>
+
+        <p id="joke"></p>
       </div>
     </div>
-
-    <script>
-      function onClick() {
-        document.getElementsByClassName("about-me")[0].style.backgroundColor =
-          "pink";
-      }
-    </script>
   </body>
-  <script>
-    $(function () {
-      $("#nav-bar").load("./assests/nav-bar.html");
-    });
-  </script>
+  <script src="js/index.js"></script>
 </html>
