--- a/index.html
+++ b/index.html
@@ -31,9 +31,5 @@
       </div>
     </div>
   </body>
-  <script>
-    $(function () {
-      $("#nav-bar").load("./assests/nav-bar.html");
-    });
-  </script>
+  <script src="js/index.js"></script>
 </html>
