--- a/assests/nav-bar.html
+++ b/assests/nav-bar.html
@@ -2,21 +2,27 @@
   <img id="avatar" src="assests/joanna.jpg" />
   <h2>Joanna Wang</h2>
   <div id="index" class="nav-item no-bottom-border">
-    <a href="index.html"><p class="nav-text">About Me</p></a>
+    <a href="index.html">
+      <p class="nav-text">About Me</p>
+    </a>
   </div>
   <div id="projects" class="nav-item no-bottom-border">
-    <a href="projects.html"><p class="nav-text">Projects</p></a>
+    <a href="projects.html">
+      <p class="nav-text">Projects</p>
+    </a>
   </div>
   <div id="secret" class="nav-item">
-    <a href="secret.html"><p class="nav-text">Secret Link</p></a>
+    <a href="secret.html">
+      <p class="nav-text">Secret Link</p>
+    </a>
   </div>
   <div>
-    <a href="https://ca.linkedin.com/" target="_blank"
-      ><img class="nav-icon" src="./assests/linkedin.svg"
-    /></a>
+    <a href="https://www.linkedin.com/in/joanna-wang-937127196" target="_blank"><img class="nav-icon"
+        src="./assests/linkedin.svg" /></a>
 
     <img class="nav-icon" src="./assests/facebook.svg" />
-    <img class="nav-icon" src="./assests/github.svg" />
+    <a href="https://github.com/JjwangG/myWebsite.git" target="_blank"><img class="nav-icon"
+        src="/assests/github.svg" /></a>
   </div>
 </div>
 <script>
