fixed icon error

--- a/assests/nav-bar.html
+++ b/assests/nav-bar.html
@@ -22,7 +22,7 @@
 
     <img class="nav-icon" src="./assests/facebook.svg" />
     <a href="https://github.com/JjwangG/myWebsite.git" target="_blank"><img class="nav-icon"
-        src="/assests/github.svg" /></a>
+        src="./assests/github.svg" /></a>
   </div>
 </div>
 <script>
